@@ -1,7 +1,6 @@
 = Next Up
 
 * Generator should do the right thing when the base directory has a dash in it.
-* Find a better way to clean; I don't want to whack .bundler and .rvmrc.
 * Add :only/:except options to Shoe::Tasks.define.
 * Remove Launchy? (Follow hub's lead.)
 * Re-think focus: probably want to ditch cucumber, since I'm not using it for shoe?
